card height issue fix on safari

--- a/src/App.scss
+++ b/src/App.scss
@@ -80,6 +80,19 @@ button {
   }
 }
 
+@media not all and (min-resolution: 0.001dpcm) {
+  @supports (-webkit-appearance: none) {
+    /* Safari-only CSS goes here */
+    body {
+      .responsive-grid {
+        .product-card {
+          max-height: 30dvh;
+        }
+      }
+    }
+  }
+}
+
 .theme1 {
 
   .responsive-grid {
